# linux-g13-driver

./: .gitignore  README.md
bitmap_tool/src/cpp/: create_bitmap  create_bitmap.cpp
docs/: README
g13-config-tool/: pom.xml
g13-config-tool/src/main/java/com/booker/g13/: Configs.java  G13.java  ImageIconHelper.java  ImageMap.java  ImageMapListener.java  JavaToLinuxKeymapping.java  Key.java  KeybindPanel.java  MacroEditorPanel.java  MacroListCellRenderer.java
g13-driver/: CMakeLists.txt  Makefile
g13-driver/bindings/: macro-0.properties  macro-1.properties  macro-11.properties  macro-21.properties  macro-24.properties  macro-25.properties  macro-3.properties  macro-37.properties  macro-43.properties  macro-45.properties  macro-5.properties  macro-8.properties  macro-9.properties
g13-driver/bindings/.g13/: bindings-0.properties  macro-101.properties  macro-102.properties  macro-106.properties  macro-107.properties  macro-109.properties  macro-110.properties  macro-118.properties  macro-120.properties  macro-121.properties  macro-123.properties  macro-124.properties  macro-126.properties  macro-128.properties  macro-129.properties  macro-130.properties  macro-131.properties  macro-133.properties  macro-137.properties  macro-140.properties  macro-141.properties  macro-146.properties  macro-147.properties  macro-148.properties  macro-149.properties  macro-153.properties  macro-154.properties  macro-161.properties  macro-163.properties  macro-164.properties  macro-166.properties  macro-167.properties  macro-168.properties  macro-171.properties  macro-172.properties  macro-173.properties  macro-174.properties  macro-175.properties  macro-176.properties  macro-178.properties  (+55 more)
g13-driver/scripts/: install_deps.sh
g13-driver/src/: 99-g13.rules  CMakeLists.txt  Linux-G13-Driver  Makefile  resources.qrc
g13-driver/src/cpp/: ConfigPath.h  Constants.h  G13.cpp  G13.h  G13Action.cpp  G13Action.h  Macro.h  MacroAction.cpp  MacroAction.h  MacroThreadPool.cpp  MacroThreadPool.h  Main.cpp  Output.cpp  Output.h  PassThroughAction.cpp  PassThroughAction.h
g13-driver/src/driver/: ConfigPath.cpp  Constants.h  Font.h  G13.cpp  G13Action.cpp  Macro.cpp  Macro.h  MacroAction.cpp  MacroAction.h  Main.cpp
g13-driver/src/gui/: BindingEditor.cpp  BindingEditor.h  ColorSelector.cpp  ColorSelector.h  G13Visualizer.cpp  G13Visualizer.h  MacroRecorder.cpp  MacroRecorder.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
g13-driver/src/scripts/: g13_monitor.py
g13-driver/src/systemd/: g13.service
g13-driver/src/udev/: 99-g13-input.rules  99-g13-plugdev.rules  99-g13.rules
src/: 99-g13.rules  Linux-G13-Driver  Makefile
src/bindings/.g13/: bindings-1.properties  bindings-2.properties  bindings-3.properties  macro-10.properties  macro-100.properties  macro-103.properties  macro-104.properties  macro-105.properties  macro-108.properties  macro-111.properties  macro-112.properties  macro-113.properties  macro-114.properties  macro-115.properties  macro-116.properties  macro-117.properties  macro-119.properties  macro-12.properties  macro-122.properties  macro-125.properties  macro-127.properties  macro-13.properties  macro-132.properties  macro-134.properties  macro-135.properties  macro-136.properties  macro-138.properties  macro-139.properties  macro-14.properties  macro-142.properties  macro-143.properties  macro-144.properties  macro-145.properties  macro-15.properties  macro-150.properties  macro-151.properties  macro-152.properties  macro-155.properties  macro-156.properties  macro-157.properties  (+56 more)
src/cpp/: Constants.h  G13.cpp  G13.h  G13Action.cpp  G13Action.h  Macro.cpp  Macro.h  MacroAction.cpp  MacroAction.h  Main.cpp  Output.cpp  Output.h  PassThroughAction.cpp  PassThroughAction.h
